--- a/app/styles/th/_global.scss
+++ b/app/styles/th/_global.scss
@@ -13,6 +13,10 @@
 	text-align: left;
 }
 
+.no-padding{
+  padding: 0px;
+}
+
 .currency{
 	color: green;
 }
